--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 13 2025 13:34:31 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed May 14 2025 10:20:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6820080f9a298d11ce1d1355" data-wf-site="6820080f9a298d11ce1d134b">
 <head>
   <meta charset="utf-8">
@@ -13,10 +13,10 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div class="div-block-3">
-    <div class="div-block-4"><img src="images/Group-11.svg" loading="lazy" width="298" alt="" class="image-3"><img src="images/Group-10.svg" loading="lazy" width="298" alt="" class="image-2"><img src="images/Group-20.svg" loading="lazy" width="136" alt="" class="image-4">
-      <div class="form-block w-form">
-        <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form" data-wf-page-id="6820080f9a298d11ce1d1355" data-wf-element-id="d55136ab-2c92-2c5a-3917-a2fe1d831684"><input class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="name"><label for="" class="field-label">space</label><input class="text-field-2 w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="email" id="email" required=""><input type="submit" data-wait="" class="submit-button w-button" value=""></form>
+  <div class="div-block-3"><img src="images/Group-2.svg" loading="lazy" width="828" alt="" class="image">
+    <div class="div-block-4"><img src="images/Group-11.svg" loading="lazy" width="298" alt="" class="image-3"><img src="images/Group-10.svg" loading="lazy" width="298" alt="" class="image-2"><img src="images/Group-15-1.svg" loading="lazy" alt="" class="image-5"><img src="images/Group-20.svg" loading="lazy" width="136" alt="" class="image-4">
+      <div class="form-block-3 w-form">
+        <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form-3" data-wf-page-id="6820080f9a298d11ce1d1355" data-wf-element-id="e5a3bceb-01e6-9ba4-2c90-6f29b6c4770a"><input class="text-field-3 w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="name"><input class="text-field-4 w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="email" id="email" required=""><input type="submit" data-wait="Please wait..." class="w-button" value="Submit"></form>
         <div class="w-form-done">
           <div>Thank you! Your submission has been received!</div>
         </div>
@@ -24,7 +24,7 @@
           <div>Oops! Something went wrong while submitting the form.</div>
         </div>
       </div>
-    </div><img src="images/Group-2.svg" loading="lazy" width="828" alt="" class="image">
+    </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6820080f9a298d11ce1d134b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
